Add support for bolt protocols (#10)
This commit adds support for bolt protocols. With this change, AuraDB is supported (#5).
Also, the Neo4j driver was updated to the latest version (5.2.0)

* Start refactoring DataSourceMetadataUi and related classes
* Add support for bolt protocols (#5)